tests/ui/derive_specifier/duplicate_derive_2.stderr
error: encountered duplicate `#[derive(Specifier)]` parameter
 --> tests/ui/derive_specifier/duplicate_derive_2.rs:4:31
  |
4 | #[derive(Specifier)] #[derive(Specifier)]
  |                               ^^^^^^^^^

error: previous `#[derive(Specifier)]` parameter here
 --> tests/ui/derive_specifier/duplicate_derive_2.rs:4:10
  |
4 | #[derive(Specifier)] #[derive(Specifier)]
  |          ^^^^^^^^^
